# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: membership_card.db
dokumentaatio/: Instructions for use.md  Instructions.md  Testing.md  architecture.md  changelog.md  specification.md  workhour.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Tehtava1_Monopoli.md  Tehtava2_Sekvenssikaavio.md
src/: database_connection.py  initialize_database.py
src/models/: transaction.py  user.py
src/repositories/: transaction_repository.py  user_repository.py
src/services/: transaction_service.py  user_service.py
src/tests/: test_initialize_database.py  test_transaction_repository.py  test_transaction_service.py  test_user.py  test_user_repository.py  test_user_service.py  transactionrepository_test.py
src/ui/: customer_view.py  main_login_view.py  storekeeper_view.py  ui.py
