[tool.poetry]
name = "membershippaymentcard"
version = "0.1.0"
description = ""
authors = ["XiaowenOT <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
coverage = "^7.8.0"
pytest = "^8.3.5"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
